# sampling-iot

./: .gitignore  README.md
CS1237模块资料/CS1237 24bit ADC模块发客户资料/: CS1237 24bit ADC模块发客户资料.rar
CS1237模块资料/CS1237 24bit ADC模块发客户资料/STC15W CS1237 DEMO - 内部基准/hex/: CS1237  CS1237.build_log.htm  CS1237.hex  STC8X CS1237 DEMO  STC8X CS1237 DEMO.build_log.htm
CS1237模块资料/CS1237 24bit ADC模块发客户资料/STC15W CS1237 DEMO - 内部基准/project/: STC8X CS1237 DEMO.plg  STC8X CS1237 DEMO.uvgui.lfx885  STC8X CS1237 DEMO.uvopt  STC8X CS1237 DEMO_uvopt.bak
CS1237模块资料/CS1237 24bit ADC模块发客户资料/STC15W CS1237 DEMO - 内部基准/user/: config.h  cs1237.c  delay.h
CS1237模块资料/CS1237 24bit ADC模块发客户资料/STC15W CS1237 DEMO/hex/: CS1237  CS1237.build_log.htm  CS1237.hex  CS1237.lnp  STC8X CS1237 DEMO.plg  cs1237.__i
CS1237模块资料/CS1237 24bit ADC模块发客户资料/STC15W CS1237 DEMO/project/: STC8X CS1237 DEMO.uvgui.lfx885  STC8X CS1237 DEMO.uvproj
Streamlit/: .gitignore  esp32_code.c  main.py  main_streamlit.py
esp32/main/: CMakeLists.txt  idf_component.yml  main.c
gui/: OPTIMIZATION_NOTES.md  cs1237_pyqt6.py  cs1237_pyqt6_optimized.py  import tkinter as tk.py  协议.py  协议通讯说明.md  备份.py
gui/11.11/: 11.9.py  main.py  pyproject.toml
gui/11.18/: 11.18.py  README.md  pyproject.toml
gui/11.18改/: 11.18gai.py  README.md  V3.0更新说明.txt  pyproject.toml  run.bat  使用说明.md
gui/11.18改/src/cs1237_gui/: __init__.py
gui/12.11/: 12.11.py  pyproject.toml  requirement.txt
gui/12.8/: 12.8.py  calibration.json
uno cs1237/cs1237/: cs1237.ino
uno cs1237/cs1237/11.18/: 11.18.ino
uno cs1237/cs1237/11.9/: 11.9.ino
(+54 files in other folders)
